# NaiveTaskDistributionSystem

./: .gitignore  CMakeLists.txt  README.md
Client/src/: client.hpp  main.cpp
Server/src/: main.cpp  server.hpp
shared/: command.hpp  file.hpp  file_manager.hpp  invalid_data_stream.hpp  invalid_file.hpp  options.hpp  request.hpp  serializable.hpp  task.hpp  task_manager.hpp  utils.hpp
